<resources>
    <string name="register_activity_title">注册</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phoneNum">手&#160;&#160;机&#160;&#160;号</string>
    <string name="identifyingCode">验&#160;&#160;证&#160;&#160;码</string>
    <string name="registerPassword">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="identifyPassword">确认密码</string>
    <string name="invitationCode">邀&#160;&#160;请&#160;&#160;码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="getIdentifyingCode">获取验证码</string>
    <string name="registerExplain">完成注册并填写邀请码即可立获10元奖励！</string>
</resources>
