<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/register_tool_bar"
        layout="@layout/view_toolbar" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tool_bar"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerExplain" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>

        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phoneNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNum"
                android:textColor="@color/chatlist_time_color" />

            <EditText
                android:id="@+id/accountEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>

        <LinearLayout
            android:id="@+id/layout_identifyingCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_account">

            <TextView
                android:id="@+id/identifyingCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifyingCode"
                android:textColor="@color/chatlist_time_color" />

            <EditText
                android:id="@+id/identifyingCodeEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getIdentifyingCode" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>


        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_account">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerPassword"
                android:textColor="@color/chatlist_time_color" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>

        <LinearLayout
            android:id="@+id/layout_identifyPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_account">

            <TextView
                android:id="@+id/identifyPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifyPassword"
                android:textColor="@color/chatlist_time_color" />

            <EditText
                android:id="@+id/identifyPasswordEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>

        <LinearLayout
            android:id="@+id/layout_InvitationCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_account">

            <TextView
                android:id="@+id/invitationCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitationCode"
                android:textColor="@color/chatlist_time_color" />

            <EditText
                android:id="@+id/invitationCodeEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_1"
            android:background="@color/common_line_color"></View>


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register" />
    </LinearLayout>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

</RelativeLayout>
